--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -4,24 +4,16 @@
   #   The weight parameter defines the order that the links will appear in.
 
 main:
-  - name: Bio
+  - name: Home
     url: /
     weight: 10
-  - name: Papers
-    url: /#papers
-    weight: 11
-  - name: Talks
-    url: /#talks
-    weight: 12
-  - name: News
-    url: /#news
-    weight: 13
-  - name: Experience
-    url: experience/
+  - name: Research Areas
+    url: /#research-areas
     weight: 20
   - name: Projects
-    url: projects/
+    url: /#projects
     weight: 30
-  - name: Teaching
-    url: teaching/
+  - name: Activities
+    url: /#activities
     weight: 40
+
