--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -8,12 +8,12 @@ main:
     url: /
     weight: 10
   - name: Research Areas
-    url: /#research-areas
+    url: /research-areas
     weight: 20
   - name: Projects
-    url: /#projects
+    url: /projects
     weight: 30
   - name: Activities
-    url: /#activities
+    url: /activities
     weight: 40
 
