--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -20,32 +20,32 @@ main:
     url: /activities
     weight: 40
 
-  - name: Fgo_positioning
+  - name: FGO Positioning
     parent: projects
     url: projects/fgo_positioning/
     weight: 10
 
-  - name: Path_planning
+  - name: UAV Path Planning
     parent: projects
     url: projects/path_planning/
     weight: 20
 
-  - name: Vision_landing
+  - name: UAV Vision Landing
     parent: projects
     url: projects/vision_landing/
     weight: 30
 
-  - name: Iono_modeling
+  - name: Ionosphere Modeling
     parent: projects
     url: projects/iono_modeling/
     weight: 40
 
-  - name: Leo_pnt
+  - name: LEO PNT
     parent: projects
     url: projects/leo_pnt/
     weight: 50
   
-  - name: Sdr
+  - name: SDR
     parent: projects
     url: projects/sdr/
     weight: 60
